   - ovs-vswitchd no longer deletes datapath flows on exit by default.


v2.13.0 - xx xxx xxxx
---------------------
   - OVN:
     * OVN has been removed from this repository. It now exists as a
       separate project. You can find it at
       https://github.com/ovn-org/ovn.git
   - Userspace datapath:
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
   - AF_XDP:
     * New option 'use-need-wakeup' for netdev-afxdp to control enabling
       of corresponding 'need_wakeup' flag in AF_XDP rings.  Enabled by default
       if supported by libbpf.
     * 'xdpmode' option for netdev-afxdp renamed to 'xdp-mode'.
       Modes also updated.  New values:
         native-with-zerocopy  - former DRV
         native                - new one, DRV without zero-copy
         generic               - former SKB
         best-effort [default] - new one, chooses the best available from
                                 3 above modes
   - DPDK:
     * Add hardware offload support for output, drop, set of MAC, IPv4,
       TCP/UDP ports and tunnel push-output actions.

v2.12.0 - 03 Sep 2019
---------------------
   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
     * Add support for vHost Post-copy Live Migration (experimental).
     * OVS validated with DPDK 18.11.2 which is the new minimal supported
       version.
     * DPDK 18.11.1 and lower is no longer supported.
     * New option 'tx-retries-max' to set the maximum amount of vhost tx
       retries that can be made.
   - OpenFlow:
     * All features required by OpenFlow 1.5 are now implemented, so
       ovs-vswitchd now enables OpenFlow 1.5 by default (in addition to
       OpenFlow 1.0 to 1.4).
     * Removed support for OpenFlow 1.6 (draft), which ONF abandoned.
     * New action "check_pkt_larger".
     * Support for OpenFlow 1.5 "meter" action.
   - Userspace datapath: